@@ -1,3 +1,8 @@
+2005-12-14  Don Scorgie  <dscorgie@cvs.gnome.org>
+
+	* src/yelp-db-pager.c: 
+	Remove xslt from node_get_title, making yelp uber-quick
+
 ==================== 2.13.2 ====================
 
 2005-12-12  Shaun McCance  <shaunm@gnome.org>
